# nicollas5na

./: README.md  docker-compose.yml  main.py  perceptron.py  pyproject.toml
parquet/user_reviews_g2.parquet/: .part-00000-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet.crc  .part-00001-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet.crc  .part-00002-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet.crc  .part-00003-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet.crc  .part-00004-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet.crc  part-00000-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet  part-00001-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet  part-00002-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet  part-00003-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet  part-00004-30a98079-6633-4a1c-b6c9-5dcf2bc8594c-c000.snappy.parquet
